--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ async-std = "1.13"
 async-stream = "0.3"
 async-trait = "0.1"
 async-walkdir = "2.1"
-asyncgit = { version = "0.27", default_features = false, features = [ "vendor-openssl" ] }
+asyncgit = { version = "0.27", default-features = false, features = [ "vendor-openssl" ] }
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5", features = ["cargo", "derive"] }
 cli_utils = { version = "0.9", features = ["logging"], package = "cli_utils_hoijui" }
@@ -65,12 +65,12 @@ fs4 = { version = "0.13", features = ["async-std", "fs-err3"] }
 futures = "0.3"
 # futures-util = "0.3"
 git-version = "0.3"
-git2 = { version = "0.20", default_features = false, features = [ "https", "vendored-libgit2", "vendored-openssl" ] }
+git2 = { version = "0.20", default-features = false, features = [ "https", "vendored-libgit2", "vendored-openssl" ] }
 governor = "0.8"
 # log = "0.4"
 # regex = "1.10"
 regex = { version = "1.11", default-features = false }
-reqwest = { version = "0.12", default_features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 reqwest-middleware = "0.4"
 reqwest-retry = "0.7"
 serde = { version = "1.0", features = ["derive"] }
