--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ git-version = "0.3"
 git2 = { version = "0.20", default-features = false, features = [ "https", "vendored-libgit2", "vendored-openssl" ] }
 governor = "0.10"
 # log = "0.4"
+rand = "0.9"
 # regex = "1.10"
 regex = { version = "1.11", default-features = false }
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
